# ReLightHost

./: .env.example  .gitignore  LICENSE  README.md  STEP_BY_STEP.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
LightHost/: LightHost.jucer
LightHost/Source/: HostStartup.cpp  PluginWindow.cpp  PluginWindow.h
src/: App.tsx  index.css  main.tsx  theme.semantic.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json  vst_log.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_events.rs  config.rs  lib.rs  main.rs  preset.rs
src-tauri/src/audio/: device.rs  manager.rs  mod.rs  types.rs  vu_meter.rs
src-tauri/src/bootstrap/: mod.rs  tray.rs  window.rs
src-tauri/src/commands/: audio.rs  config.rs  mod.rs  plugin.rs  session.rs  startup.rs  system.rs
src-tauri/src/core/: app_events.rs  autosave.rs  error.rs  mod.rs  session.rs  snapshot.rs  threading.rs  timing.rs
src-tauri/src/domain/: config.rs  preset.rs
src-tauri/src/plugins/: builtin_processor.rs  clap_gui.rs  clap_processor.rs  crash_protection.rs  instance.rs  launcher.rs  mod.rs  scanner.rs  types.rs  vst2_gui.rs  vst2_processor.rs  vst3_gui.rs  vst3_processor.rs
src-tauri/src/plugins/builtin/: compressor.rs  mod.rs  noise_suppressor.rs  pitch_shifter.rs  voice.rs
src-tauri/src/plugins/core/: crash_protection.rs  instance.rs  mod.rs  scanner.rs
src-tauri/src/plugins/gui/: clap.rs  mod.rs  vst2.rs  vst3.rs
src-tauri/src/plugins/processor/: clap.rs  vst2.rs  vst3.rs
src/components/: AppSettings.tsx  AudioSettings.tsx  CompressorGui.tsx  Header.tsx  Layout.tsx  NoiseSuppressorGui.tsx  PluginCard.tsx  PluginChain.tsx  PluginEditor.tsx  PluginInfoModal.tsx  PluginLibrary.tsx  PluginSettings.tsx  PresetManager.tsx  Sidebar.tsx  VUMeter.css  VUMeter.tsx  VoiceGui.tsx
src/components/audio/: AudioSettings.tsx  index.ts
src/components/chain/: CurvedArrow.tsx  PluginCard.tsx  PluginChain.tsx  index.ts
src/components/layout/: Header.tsx  Layout.tsx  LoadingScreen.tsx  VUMeter.tsx  index.ts
src/components/plugin/: PluginInfoModal.tsx  PluginLibrary.tsx  PluginSettings.tsx  index.ts
src/components/plugin-gui/: CompressorGui.tsx  NoiseSuppressorGui.tsx  VoiceGui.tsx  index.ts
src/components/settings/: AppSettings.tsx  index.ts
src/lib/: index.ts  tauri.ts  types.ts
src/stores/: audioStore.ts  pluginStore.ts  presetStore.ts  themeStore.ts
